# pyinfra-home

./: .copier-answers.yml  .pre-commit-config.yaml  Dockerfile  NOTES.md  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
src/home_infra/: __init__.py
src/home_infra/group_data/: all.py
src/home_infra/inventories/: docker_staging.py
src/home_infra/operations/: nala.py
src/home_infra/tasks/: bootstrap.py  common.py
tests/: README.md  __init__.py  conftest.py  pyinfra_test_utils.py  test_operations.py
tests/operations/: __init__.py
tests/operations/nala.fetch/: fetch_auto.json  fetch_with_all_options.json  fetch_with_country.json  fetch_with_fetches.json
tests/operations/nala.packages/: add_package.json  remove_package.json
tests/operations/nala.update/: update_cached.json  update_nocache.json
