[project]
name = "home_infra"
version = "0.0.0"
description = "…"
readme = "README.md"
authors = [{name = "Scott Hyndman", email = "scotty.hyndman@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "pyinfra>=3.2",
]
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/shyndman/home_infra"
"Bug Tracker" = "https://github.com/shyndman/home_infra/issues"

[project.scripts]
home_infra = "home_infra:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_infra"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportPrivateUsage = "warning"
reportUntypedFunctionDecorator = "warning"
reportMissingTypeArgument = "warning"
reportInvalidTypeVarUse = "warning"
reportUnnecessaryTypeIgnoreComment = "information"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.353",
]
